--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.5.3",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3"
   },
