--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
